@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-27
+2013-04-23 Andy Salnikov
+- regenerate whole thing from psddldata V00-04-25
+- pnccd.FullFramveV1 need some change, no longer needs Config type
+
 Tag: V00-01-26
 2013-03-29 Andy Salnikov
 - regenerate whole thing from psddldata V00-04-24
